--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,9 @@
         {% endfor %}
     </table>
     {% endif %}
+    <br>
+    <a href="/add_contact">Add contact</a>
+    <br>
 </div>
 
 <div class="info">
