--- a/templates/add_contact.html
+++ b/templates/add_contact.html
@@ -31,7 +31,7 @@
             <input type="text" id="comment" name="comment" /><br /><br />
             <label for="location">Location:</label>
             <input type="text" id="location" name="location" /><br /><br />
-            <label for="time_zone">Time zone:</label>
+            <label for="time_zone">Time zone (zone name or utc-offset like +1):</label>
             <input type="text" id="time_zone" name="time_zone" /><br /><br />
             <input type="submit" value="Submit" />
     </fieldset>
