--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,21 @@
 
 
 {% block body %}
+<div class="info">
+    <h1>Time zone reminder (TZR)</h1><br>
+    <ul>TZR app recognizes following short names for time zones:
+        <li>{'ART': 'America/Argentina/Buenos_Aires',</li>
+        <li>'CST': 'US/Central',</li>
+        <li>'EST': 'US/Eastern',</li>
+        <li>'IST': 'Asia/Kolkata',</li>
+        <li>'JST': 'Asia/Tokyo',</li>
+        <li>'MSK': 'Europe/Moscow',</li>
+        <li>'PST': 'US/Pacific',</li>
+        <li>'TURKEY': 'Europe/Istanbul',</li>
+        <li>'UTC': 'Etc/UTC'}</li>
+     </ul>
+</div>
+
 <div class="db">
     <h2>Contact book</h2>
     {% if contacts|length < 1 %}
@@ -42,28 +57,31 @@
     <br>
 </div>
 
-<div class="info">
-    <h1>Time zone reminder (TZR)</h1><br>
-    <ul>TZR app recognizes following short names for time zones:
-        <li>{'ART': 'America/Argentina/Buenos_Aires',</li>
-        <li>'CST': 'US/Central',</li>
-        <li>'EST': 'US/Eastern',</li>
-        <li>'IST': 'Asia/Kolkata',</li>
-        <li>'JST': 'Asia/Tokyo',</li>
-        <li>'MSK': 'Europe/Moscow',</li>
-        <li>'PST': 'US/Pacific',</li>
-        <li>'TURKEY': 'Europe/Istanbul',</li>
-        <li>'UTC': 'Etc/UTC'}</li>
-     </ul>
-</div>
+
 <div class="time">
     <h2>Time operations</h2><br>
+    <ul>Available time operations:
+        <li>Display the time that will come after a certain time period</li>
+        How much time forward (00:00 - 24:00):>
+        <div class="time_data">
+        <form action="/" method="POST">
+            <input type="text" name="time_data" id="time_data">
+            <input type="submit" value="Ok">
+        </form>
+    </div>
+        <br>
+        <li>Current time in another time zone</li>
+            How many hours and minutes forward (00:00 - 24:00):> 0
+
+        <br>
+        <li>convert time(local time to some other time zone or vice versa)</li>
+    </ul>
+
+
+
+
+
 </div>
-<div class="command">
-    <form action="/" method="POST">
-        <input type="text" name="command" id="command">
-        <input type="submit" value="Ok">
-    </form>
-</div>
+
 
 {% endblock %}
