time-operations -  added end point and corresponding template

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,12 +73,12 @@
     </div>
         <br>
         <li>Current time in another time zone</li>
-            How many hours and minutes forward (00:00 - 24:00):> 0
+
 
         <br>
         <li>convert time(local time to some other time zone or vice versa)</li>
     </ul>
-
+    <a href="/time_operations">Time operations</a>
 
 
 
