Updated pseudocode.py with tasks and corrected field Comment in forms.py

--- a/timez/templates/time_operations.html
+++ b/timez/templates/time_operations.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
 
-{% block head %}
-<h1>Time operations</h1><br>
-{% endblock %}
 
-
-{% block body %}
+{% block content %}
 <div class="time">
     <h2>Current time in another time zone</h2>
     Enter the name of time zone or utc-offset:>
