--- a/timez/templates/update.html
+++ b/timez/templates/update.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
 
-{% block head %}
 
-{% endblock %}
-
-
-{% block body %}
+{% block content %}
 <div class="content">
     <h1>Update contact</h1>
 
