Updated - django_ver/blog/templates/blog/blog.html added "author" picture which is hard-coded default pic

--- a/django_ver/blog/templates/blog/blog.html
+++ b/django_ver/blog/templates/blog/blog.html
@@ -2,6 +2,8 @@
 {% block content %}
     {% for post in posts %}
         <article class="media content-section">
+            <img class="rounded-circle article-img"
+                 src='/media/default.jpg'>
           <div class="media-body">
             <div class="article-metadata">
               <small class="text-muted">{{ post.date_posted }}</small>
