now we can see list of posts and a post details. also any logged in user can update a post

--- a/django_ver/timop/templates/timop/base.html
+++ b/django_ver/timop/templates/timop/base.html
@@ -28,7 +28,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{% url 'blog' %}">Blog</a>
+              <a class="nav-item nav-link" href="{% url 'blog-home' %}">Blog</a>
+              <a class="nav-item nav-link" href="{% url 'timop-about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
