--- a/django_ver/blog/templates/blog/post_detail.html
+++ b/django_ver/blog/templates/blog/post_detail.html
@@ -13,7 +13,7 @@
         {% endif %}
       </div>
       <h2 class="article-title">{{ object.title }}</h2>
-      <p class="article-content">{{ object.content }}</p>
+      <p class="article-content">{{ object.content|linebreaks }}</p>
     </div>
   </article>
 {% endblock content %}
