Added function Display Contact's current local time

--- a/django_ver/users/templates/users/contact_list.html
+++ b/django_ver/users/templates/users/contact_list.html
@@ -24,7 +24,7 @@
             <td>{{ object.platform }}</td>
             <td>{{ object.comment }}</td>
             <td>{{ object.location }}</td>
-            <td> object.contact_time </td>
+            <td>{{ object.contact_time }}</td>
 
         </tr>
         {% endfor %}
