--- a/django_ver/users/templates/users/contact_detail.html
+++ b/django_ver/users/templates/users/contact_detail.html
@@ -8,7 +8,7 @@
     <p>{{ object.platform }}</p>
     <p>{{ object.comment }}</p>
     <p>{{ object.location }}</p>
-    <p>object.contact_time</p>
+    <p>{{ object.contact_time }}</p>
 </div>
 
 <div>
