Added new field to Profile model (utc_offset) and to profile.html

--- a/django_ver/users/templates/users/profile.html
+++ b/django_ver/users/templates/users/profile.html
@@ -7,8 +7,10 @@
         <div class="media-body">
           <h2 class="account-heading">{{ user.username }}</h2>
           <p class="text-secondary">{{ user.email }}</p>
+          <p class="text-secondary">{{ user.profile.utc_offset }}</p>
         </div>
       </div>
+
       <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
