--- a/django_ver/blog/templates/blog/post_detail.html
+++ b/django_ver/blog/templates/blog/post_detail.html
@@ -4,7 +4,7 @@
     <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
     <div class="media-body">
       <div class="article-metadata">
-        <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
+        <small class="text-muted">{{ object.date_posted|date:"F d, Y H:i Oe" }}</small>
         {% if user.is_staff %}
           <div>
             <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}">Update</a>
