--- a/django_ver/users/templates/users/profile.html
+++ b/django_ver/users/templates/users/profile.html
@@ -7,7 +7,7 @@
         <div class="media-body">
           <h2 class="account-heading">{{ user.username }}</h2>
           <p class="text-secondary">{{ user.email }}</p>
-          <p class="text-secondary">{{ user.profile.utc_offset }}</p>
+          <p class="text-secondary">User's local time zone/ UTC offset: {{ user.profile.utc_offset }}</p>
         </div>
       </div>
 
