--- a/django_ver/timop/templates/timop/timop.html
+++ b/django_ver/timop/templates/timop/timop.html
@@ -1,33 +1,67 @@
 {% extends "timop/base.html" %}
 {% block content %}
 <h2>Current time in a time zone</h2>
-<p>Enter the name of time zone or utc-offset:</p>
 <table style="width: 900px">
-    <tbody>
       <tr>
+          <td> Enter the name of time zone or utc-offset:</td>
           <td>
-                <form action="{% url 'timop' %}" method="POST">{% csrf_token %}
-                    {{form.as_p}}
-                    <button type="submit">Submit</button>
-                </form>
-          </td>
-          <td>{% if result %}
-                {{ result }}
-            {% endif %}
+              {% if result1 %}
+                    {{ result1 }}
+                  {% endif %}
           </td>
       </tr>
-    </tbody>
+      <tr>
+          <td colspan=2>
+              <form action="{% url 'timop' %}" method="POST">{% csrf_token %}
+                {{ form.current_time }}
+                <button type="submit">Submit</button>
+              </form>
+          </td>
+      </tr>
 </table>
-
-
 
 <br>
 <h2>Convert time</h2>
-    <h3>-> convert local time to some other time zone</h3>
-    Enter the destination time zone(name or utc-offset) and time
-    in format "EST;00:00" :>
-<h3><- convert other time zone time to local time</h3>
-    Enter the original time zone (name or utc-offset) and time
-    in format "EST;00:00" :>
+<h3>Convert local time to some other time zone -> </h3>
+<table style="width: 900px">
+      <tr>
+          <td> Enter the destination time zone(name or utc-offset) and time
+          in format "EST;00:00" :</td>
+          <td>
+              {% if result2 %}
+                    {{ result2 }}
+                  {% endif %}
+          </td>
+      </tr>
+      <tr>
+          <td colspan=2>
+              <form action="{% url 'timop' %}" method="POST">{% csrf_token %}
+                {{ form.convert_local_time }}<button type="submit">Submit</button></form>
+          </td>
+      </tr>
+</table>
+
+<h3>Convert other time zone time to local time <- </h3>
+<table style="width: 900px">
+      <tr>
+          <td>
+              Enter the original time zone (name or utc-offset) and time
+              in format "EST;00:00" :
+          </td>
+          <td>
+              {% if result3 %}
+                    {{ result3 }}
+                  {% endif %}
+          </td>
+      </tr>
+      <tr>
+          <td colspan=2>
+              <form action="{% url 'timop' %}" method="POST">{% csrf_token %}
+                {{ form.convert_other_time }}
+                <button type="submit">Submit</button>
+              </form>
+          </td>
+      </tr>
+</table>
 
 {% endblock content %}
