--- a/django_ver/blog/templates/blog/post_detail.html
+++ b/django_ver/blog/templates/blog/post_detail.html
@@ -1,13 +1,13 @@
 {% extends "timop/base.html" %}
 {% block content %}
   <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+    <img class="rounded-circle article-img" src="/media/default.jpg">
     <div class="media-body">
       <div class="article-metadata">
         <small class="text-muted">{{ object.date_posted|date:"F d, Y H:i Oe" }}</small>
         {% if user.is_staff %}
           <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}">Update</a>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url "post-update' object.id %}">Update</a>
             <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
           </div>
         {% endif %}
