Updated - django_ver/timop/templates/timop/about.html

--- a/django_ver/timop/templates/timop/about.html
+++ b/django_ver/timop/templates/timop/about.html
@@ -1,4 +1,7 @@
 {% extends "timop/base.html" %}
 {% block content %}
-    <h1>About Page</h1>
+<h1>About TimeZ</h1>
+In <a href="{% url 'timop-timop' %} ">Time operations</a> it's possible to use UTC offset
+or TZ identifier from Olson database
+(check <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">List of tz database time zones</a>)
 {% endblock content %}
