Updated - django_ver/timop/templates/timop/about.html

--- a/django_ver/timop/templates/timop/about.html
+++ b/django_ver/timop/templates/timop/about.html
@@ -1,7 +1,19 @@
 {% extends "timop/base.html" %}
 {% block content %}
-<h1>About TimeZ</h1>
-In <a href="{% url 'timop-timop' %} ">Time operations</a> it's possible to use UTC offset
+<h1>TimeZ (Time Zone Reminder)</h1>
+<small class="text-muted">Origin: <a href="httsmalls://github.com/gelst13/TimeZoneReminder/tree/django-ver" > gelst13/   TimeZ/django-ver</a></small>
+<p>is an application, designed to:
+    <ul>
+    <li>keep information about user's contacts time zone,</li>
+    <li>display their current time,</li>
+    <li>and make several operations with time,</li>
+    </ul>
+based on user's local offset to UTC.</p>
+
+<p>In <a href="{% url 'timop-timop' %} ">Time operations</a> it's possible to use UTC offset
 or TZ identifier from Olson database
 (check <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">List of tz database time zones</a>)
 {% endblock content %}
+</p>
+
+
