offset charField instead of utc_offset

--- a/django_ver/users/templates/users/contact_detail.html
+++ b/django_ver/users/templates/users/contact_detail.html
@@ -5,7 +5,7 @@
     <h3>{{ object.contact_name }}</h3>
     <p>{{ object.location }}</p>
     <p>{{ object.zone_name }}</p>
-    <p>{{ object.utc_offset }}</p>
+    <p>{{ object.offset }}</p>
     <p>{{ object.platform }}</p>
     <p>{{ object.comment }}</p>
     <p>{{ object.contact_time }}</p>
