--- a/django_ver/timop/templates/timop/timez.html
+++ b/django_ver/timop/templates/timop/timez.html
@@ -1,6 +1,8 @@
 {% extends "timop/base.html" %}
 {% block content %}
-<h2 class="article-metadata">AnonymousUser, please enter your local time zone' offset:</h2>
+<h2 class="article-metadata">AnonymousUser, please enter
+    your local time zone' offset in format "+hh" or "-hhmm"
+    (e.g."-01" or "+0230":</h2>
 <form action="{% url 'timop-timez' %}" method="POST">{% csrf_token %}
 {{ form.local_offset }}
 <button type="submit">Submit</button>
