--- a/django_ver/timop/templates/timop/timop.html
+++ b/django_ver/timop/templates/timop/timop.html
@@ -4,7 +4,7 @@
 <div class="media-body">
     <p class="border-bottom mb-4">
 {% if user.is_authenticated%}
-    {{ user.username }}, your local time zone: {{ user.profile.utc_offset }}GMT/UTC
+    {{ user.username }}, your local time zone: {{ user.profile.offset }}GMT/UTC
 {% else %}
     AnonymousUser, your local time zone: {{ local_offset }}GMT/UTC
 {% endif%}
