--- a/django_ver/users/templates/users/contact_list.html
+++ b/django_ver/users/templates/users/contact_list.html
@@ -24,7 +24,7 @@
             <td><h5><a class="article-title" href="{% url 'contact-detail' object.id %}"> {{ object.contact_name }} </a></h5></td>
             <td>{{ object.location }}</td>
             <td>{{ object.zone_name }}</td>
-            <td>{{ object.utc_offset }}</td>
+            <td>{{ object.offset }}</td>
             <td>{{ object.platform }}</td>
             <td>{{ object.comment }}</td>
             <td>{{ object.contact_time }}</td>
