--- a/django_ver/timop/templates/timop/about.html
+++ b/django_ver/timop/templates/timop/about.html
@@ -10,7 +10,7 @@
     </ul>
 based on user's local offset to UTC.</p>
 
-<p>In <a href="{% url 'timop-timop' %} ">Time operations</a> it's possible to use UTC offset
+<p>In <a href="{% url 'timop-timop' %} ">Time operations</a> it's possible to use UTC offset in format '+hh' of '-hhmm' (e.g. +02 or -0230)
 or TZ identifier from Olson database
 (check <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">List of tz database time zones</a>)
 {% endblock content %}
