--- a/django_ver/timop/templates/timop/base.html
+++ b/django_ver/timop/templates/timop/base.html
@@ -36,7 +36,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'contacts' %}">Contacts</a>
+                <a class="nav-item nav-link" href="{% url 'user-contacts' user.username %}">Contacts</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
